# mangle

./: .gitignore  CHANGELOG.md  NOTICE  POST_V01.md  README.md  pyproject.toml
.github/workflows/: ci.yml
contrib/afl-harness/: Makefile  README.md  harness.c
src/mangle/: __init__.py  afl.py  bitstream.py  cli.py  corpus.py  corpus_trim.py  coverage.py  decoder.py  engine.py  heatmap.py  hevc.py  mutation_score.py  reduce.py  replay.py  scheduler.py  triage.py
src/mangle/mutators/: __init__.py  builtin.py  registry.py
tests/: test_afl.py  test_bitstream.py  test_corpus.py  test_corpus_trim.py  test_coverage.py  test_decoder.py  test_engine.py  test_heatmap.py  test_hevc.py  test_integration.py  test_mutation_score.py  test_mutators.py  test_reduce.py  test_replay.py  test_scheduler.py  test_triage.py  test_vps.py  test_wheel_ship_gate.py
tests/fixtures/: README.md  clean.h265  sei-buffering.hevc
